--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "cSpell.words": [
         "challengelist",
         "defwords",
-        "nextchallenge"
+        "nextchallenge",
+        "totalright",
+        "totalwrong"
     ]
 }
