--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,11 @@
 {
     "cSpell.words": [
         "challengelist",
+        "curbadges",
         "defwords",
+        "letterid",
         "nextchallenge",
+        "oldbadges",
         "totalright",
         "totalwrong"
     ]
