--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "curbadges",
         "defwords",
         "letterid",
+        "maxpage",
         "nextchallenge",
         "oldbadges",
         "totalright",
